<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.newbankingproject.ui.login.viewModel.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:supportsRtl="true"
        android:background="@drawable/login_background">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            style="@style/TextView.24sp.Black.Inter_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginTop="@dimen/thirtyDp"
            android:drawableStart="@drawable/ic_language_icon"
            android:drawablePadding="@dimen/tenDp"
            android:text="@string/en"
            android:textSize="@dimen/txt_sixteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            style="@style/TextView.24sp.Black.Inter_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneNumber"
            style="@style/TextView.16sp.Black.Inter_SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginTop="@dimen/thirtyDp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginTop="@dimen/txt_seven"
            app:cardCornerRadius="@dimen/txt_seven"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCode"
                    style="@style/TextView.16sp.Blue.Inter_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/txt_nineteen"
                    android:paddingVertical="@dimen/txt_seventeen"
                    android:text="@string/_91"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/TextView.16sp.Black.Inter_SemiBold"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_0dp"
                    android:background="@android:color/transparent"
                    android:gravity="start|center"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    android:maxLength="10"
                    android:paddingStart="@dimen/tenDp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCode"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            style="@style/TextView.16sp.Black.Inter_SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginTop="@dimen/txt_sixteen"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPhone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginTop="@dimen/txt_seven"
            app:cardCornerRadius="@dimen/txt_seven"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/TextView.16sp.Black.Inter_SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|center"
                android:hint="@string/password"
                android:textAlignment="viewStart"
                android:maxLength="10"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/txt_nineteen"
                android:paddingVertical="@dimen/txt_seventeen" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgetPassword"
            style="@style/TextView.16sp.Blue.Inter_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_sixteen"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="@+id/cvPassword"
            app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginVertical="@dimen/txt_sixteen"
            android:background="@drawable/button_background"
            android:text="@string/continues"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegister"
            style="@style/TextView.16sp.Blue.Inter_Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirtyDp"
            android:layout_marginVertical="@dimen/txt_sixteen"
            android:text="@string/register_your_self"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>